# rustyll

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  PROMPT_FOR_AI.md  README.md  RELEASE_COMPLETE.md  RELEASE_INSTRUCTIONS.md  RELEASE_NOTES_v0.8.0.md  RELEASE_SUMMARY.md  TODO.md  check-release-status.sh  install_local.sh  rustyll.rb  test  test_config_parse.rs  test_rustyll.sh
.github/workflows/: README.md  ci.yml  lint.yml  publish-manual.yml  release.yml
demo_site/: blog.md  docs.md  index.md  projects.md  test.yml  test_config.rs  test_config.yml
demo_site/_layouts/: default.html  home.html  page.html
demo_site/_posts/: 2024-01-15-welcome-to-rustyll.md  2024-02-10-performance-optimization.md  2024-03-15-migrating-from-jekyll.md  2024-04-20-themes-and-customization.md  2024-05-30-advanced-features.md  2025-05-25-welcome-to-jekyll.markdown
demo_site/assets/css/: style.css
design/: CLI_REFACTOR_PLAN.md  TODO.md
research/: 10-advanced-features.md  2-front-matter.md  3-configuration.md  4-plugin-system.md  7-pagination.md  README.md
rustyll-site/: MIGRATION.md  README.md  index.md
rustyll-site/_data/: README.md
rustyll-site/_includes/: README.md
rustyll-site/_layouts/: README.md  post.html
rustyll-site/_posts/: README.md
rustyll-site/_site/: MIGRATION.html  README.html  _config.yml
rustyll-site/_site/assets/: README.html
rustyll-site/assets/: README.md
scripts/: create_dist.sh  publish_release.sh
src/: main.rs
src/builder/: mod.rs  types.rs
src/builder/page/: collector.rs  mod.rs  model.rs  utils.rs
src/builder/processor/: mod.rs  yaml.rs
src/builder/site/: builder.rs  converter.rs  loader.rs  mod.rs  processor.rs
src/builder/watcher/: fs_watcher.rs  mod.rs
src/cli/: logging.rs  mod.rs  types.rs
src/cli/commands/: build.rs  cache.rs  clean.rs  completions.rs  config.rs  migrate.rs  mod.rs  new.rs  plugin.rs  report.rs  serve.rs  theme.rs
src/collections/: mod.rs  types.rs
src/collections/data/: loader.rs  mod.rs
src/collections/document/: converter.rs  mod.rs
src/collections/utils/: converter.rs  mod.rs
src/config/: loader.rs  mod.rs  permalink.rs  types.rs  validation.rs
src/config/defaults/: front_matter.rs  mod.rs  values.rs
src/directory/: mod.rs
src/directory/structure/: directory_structure.rs  mod.rs  operations.rs
src/directory/types/: directory_type.rs  error_types.rs  mod.rs
src/directory/utils/: cleaning.rs  file_operations.rs  mod.rs  path_helpers.rs
src/front_matter/: defaults.rs  extractor.rs  mod.rs
src/front_matter/parser/: mod.rs  yaml_parser.rs
src/front_matter/types/: deserializers.rs  front_matter.rs  mod.rs
src/front_matter/utils/: content.rs  mod.rs
src/layout/: compress.html  default.html  mod.rs  renderer.rs
src/liquid/: mod.rs  preprocess.rs
src/liquid/filters/: absolute_url.rs  date.rs  date_to_string.rs  date_to_xmlschema.rs  markdownify.rs  mod.rs  number_with_delimiter.rs  relative_url.rs  shuffle.rs
src/liquid/tags/: highlight.rs  include.rs  include_relative.rs  link.rs  mod.rs  raw.rs  utils.rs
src/markdown/: mod.rs  types.rs
src/markdown/engine/: comrak.rs  mod.rs
src/markdown/renderer/: markdown_renderer.rs  mod.rs  syntax.rs
src/markdown/toc/: generator.rs  mod.rs  parser.rs
src/markdown/utils/: mod.rs  text.rs
src/migrate/: engines.rs  mod.rs
src/migrate/engines/: README.md
src/plugins/: hooks.rs  loader.rs  mod.rs  registry.rs
src/report/: accessibility.rs  lighthouse.rs  links.rs  mod.rs  performance.rs  seo.rs
src/research/: 1-directory-structure.md  10-advanced-features.md  2-front-matter.md  5-liquid-templates.md  6-markdown-rendering.md  8-collections-data.md  9-github-pages.md
src/server/: mod.rs  types.rs
src/server/app/: factory.rs  mod.rs
src/server/config/: mod.rs  server_config.rs
src/server/core/: mod.rs  server.rs  watcher.rs
src/server/handlers/: mod.rs  (+1 more)
src/utils/: error.rs  fs.rs  mod.rs  path.rs
(+196 files in other folders)
