[package]
name = "rustyll"
version = "0.8.3"
edition = "2021"
description = "A blazing fast, Jekyll-compatible static site generator written in Rust"
authors = ["Rustyll Team"]
license = "AGPL-3.0"
repository = "https://github.com/betterwebinit/rustyll"
homepage = "https://rustyll.better-web.org"
documentation = "https://rustyll.better-web.org"
keywords = ["ssg", "jekyll", "markdown", "liquid", "static-site"]
categories = ["command-line-utilities", "web-programming"]
readme = "README.md"

[features]
default = []
tls = ["dep:tokio-rustls"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
liquid = "0.26"
liquid-core = "0.26"
liquid-lib = { version = "0.26", features = ["stdlib"] }
walkdir = "2.4.0"
fs_extra = "1.3"
frontmatter = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
chrono = "0.4"
gray_matter = "0.2"
notify = { version = "8.0", features = ["serde"] }
axum = { version = "0.8", features = ["tracing"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "fs", "compression-gzip", "compression-br", "trace", "cors",
    "decompression-gzip", "decompression-br", "catch-panic", "timeout", "set-header"
] }
tokio = { version = "1.32", features = ["full"] }
tokio-rustls = { version = "0.26", optional = true }
hyper = { version = "1.1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
tower-service = "0.3"
rustls = "0.23"
rustls-pemfile = "2.2"
mime_guess = "2.0"
glob = "0.3"
rayon = "1.8"
log = "0.4"
simple_logger = "5.0"
futures-core = "0.3"
futures-util = "0.3"
lazy_static = "1.4.0"
num_cpus = "1.16"
http = "1.0"

# For syntax highlighting and markdown
comrak = "0.39"
syntect = "5.1"
html-escape = "0.2"
regex = "1.10.3"
once_cell = "1.19"
sha2 = "0.10"
hex = "0.4"
httpdate = "1.0"

# For utility functions
urlencoding = "2.1"
slug = "0.1"
serde_json = "1.0"
csv = "1.1"
yaml-front-matter = "0.1.0"
yaml-rust = "0.4.5"
glob-match = "0.2.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
debug = false
